<menu xmlns:android="http://schemas.android.com/apk/res/android"> 

    <item 
        android:id="@+id/menu_forward"
        android:title="@string/menu_forward"
        android:showAsAction="always"
        android:icon="@drawable/navigation_forward"
        android:onClick="onForwardMenu"/>
    <item 
        android:id="@+id/menu_backward"
        android:title="@string/menu_backward"
        android:showAsAction="always"
        android:icon="@drawable/navigation_back"
        android:onClick="onBackwardMenu"/>
    <item 
        android:id="@+id/menu_save"
        android:title="@string/menu_save"
        android:showAsAction="always"
        android:icon="@drawable/content_save"
        android:onClick="onSaveClicked"/>
    <item 
        android:id="@+id/menu_discard"
        android:title="@string/menu_discard"
        android:showAsAction="always"
        android:icon="@drawable/content_discard"
        android:onClick="onDiscardClicked"/>
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="always"
        android:title="@string/menu_settings"
        android:icon="@drawable/action_settings"
        android:onClick="onSettingsClicked"/>
    
</menu>